# nic-assistant-oss

./: .gitignore  CREDITS.md  Cargo.toml  LICENSING.md  PRIVACY.md  README.md  SMOKE_TEST.md  config.example.toml  config.toml
.github/workflows/: ci.yml
src/: analyst.rs  api.rs  autostart.rs  boot.rs  config.rs  error.rs  hardware.rs  initiative.rs  lib.rs  librarian.rs  llm_server.rs  llm_utils.rs  locale.rs  notes.rs  ocr.rs  perf.rs  pilot.rs  services.rs  setup.rs  shakal.rs  ui.html  ui_from_ui_exe.html  verify.rs  wry_bridge.rs
src/modules/: anaphora.rs  librarian.rs  media_router.rs  mod.rs  pilot.rs  scrubber.rs  sentinel.rs  shakal.rs  surfer.rs  thinker.rs
